fix progress overlapping

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,6 +1,7 @@
 .app {
   width: 100%;
   height: 100%;
+  z-index: -3;
   &__main {
     height: 100vh;
     width: 100%;
@@ -9,7 +10,7 @@
     scrollbar-color: #0f0fff #e0e0e0;
     scrollbar-width: thin;
     left: 50%;
-    z-index: 0;
+    z-index: 5;
     top: 0;
     transform: translateX(-50%);
     padding-bottom: 90px;
