--- a/src/components/Modals/BaseModal/BaseModal.scss
+++ b/src/components/Modals/BaseModal/BaseModal.scss
@@ -9,6 +9,7 @@
   display: flex;
   width: 100%;
   height: 100%;
+  z-index: 7;
   position: absolute;
   &__window {
     cursor: default;
